[gd_scene load_steps=2 format=3 uid="uid://b73w2uv368ylh"]

[ext_resource type="Script" uid="uid://dfiggeonqq3pt" path="res://SubScenes/sql_control.gd" id="1_nhegm"]

[node name="SQLControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhegm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SQL"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Module Name"

[node name="ModuleNameLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "servertest"

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Server (Local == Localhost, Maincloud == Maincloud)"

[node name="ServerLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Local"

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "SQL Query"

[node name="SQLLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "SELECT * FROM User"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Run Query"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
